# budgetly

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
client/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
client/src/: App.tsx  Auth0.tsx  index.tsx
client/src/components/: Footer.tsx  Navbar.tsx
client/src/routes/Account/: index.tsx
client/src/routes/Home/: index.tsx
client/src/routes/Login/: index.tsx
client/src/routes/Logout/: index.tsx
client/src/types/: auth0.d.ts
entity/: Cargo.toml
entity/src/: account.rs  expense.rs  lib.rs  revenue.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs
server/: Cargo.toml  README.md  budgetly.go  go.mod  go.sum  main.go
server/db/: db.go
server/handler/: account.go  handler.go
server/handlers/: account.go  expense.go  handler.go  home.go  revenue.go  user.go
server/middleware/: cors.go  jwt.go
server/models/: account.go  expense.go  revenue.go  user.go
server/src/: api.rs  main.rs  types.rs
server/src/api/: routes.rs
server/src/api/accounts/: handlers.rs  routes.rs
server/src/api/messages/: handlers.rs
server/src/extractors/: claims.rs
server/src/middlewares/: cors.rs  err_handlers.rs
server/utils/: env.go
