[package]
name = "server"
version = "0.1.0"
authors = ["Nik Pietanze <nikpietanze@gmail.com>"]
edition = "2021"
rust-version = "1.65"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.0"
actix-cors = "0.6.4"
awc = "3.0.1"
diesel = { version = "2", features = ["postgres", "r2d2"] }
derive_more = "0.99.16"
dotenv = "0.15"
env_logger = "0.9.0"
envy = "^0.4.2"
jsonwebtoken = "8.0.0-beta.6"
serde = { version = "1", features = ["derive"] }
